# kdesvn

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  Doxyfile.in  Doxyfile.svnqt  Doxyfile.svnqt.in  INSTALL  INSTALL-cmake  Makefile.am  Messages.sh  README  TODO  TODO-svn1.5.txt  configure-debug.sh  configure.in.in  configure.sh  kdesvn-config.h.in  kdesvn-suse93.spec  kdesvn.kdevelop  kdesvn.spec  kdesvn.spec.in  kdesvn_logo_klein.xpm  kdesvn_suse.spec  makedist.sh.in
doc/: CMakeLists.txt  Makefile.am  index.docbook  makecommon.sh  makelink.cmake  man-kdesvn.1.docbook  man-kdesvnaskpass.1.docbook
doc/en/: CMakeLists.txt  Makefile.am  index.docbook
doc/man/: CMakeLists.txt  kdesvn.1  kdesvnaskpass.1
doc/nl/: CMakeLists.txt  index.docbook
src/: CMakeLists.txt  KMessageBox_KDESvnCompat  Makefile.am  commandline.cpp  commandline.h  commandline_part.cpp  commandline_part.h  display_settings.ui  displaysettings_impl.cpp  displaysettings_impl.h  eventnumbers.h  kdesvn-askpass.cpp  kdesvn.cpp  kdesvn.desktop  kdesvn.h  kdesvn.lsm  kdesvn.notifyrc  kdesvn.qrc  kdesvn_client.cpp  kdesvn_events.cpp  kdesvn_events.h  kdesvn_part.cpp  kdesvn_part.desktop  kdesvn_part.h  kdesvn_part.kcfg  kdesvn_part.qrc  kdesvn_part.rc  kdesvn_part_config.h  kdesvniface.h  kdesvnpart.desktop  kdesvnpart.json  kdesvnui.rc  kdesvnview.cpp  kdesvnview.h  main.cpp  org.kde.kdesvn.appdata.xml  org.kde.kdesvn.desktop  pref.cpp  pref.h  settings.kcfgc  (+6 more)
src/askpass/: kdesvn-askpass.cpp
src/fileitemactions/: CMakeLists.txt  kdesvnactionsplugin.cpp  kdesvnactionsplugin.json
src/helpers/: CMakeLists.txt  Makefile.am  dialog_template.h  dirnotify.cpp  dirnotify.h  kdesvn_debug.cpp  kdesvn_debug.h  ktranslateurl.cpp  ktranslateurl.h  runtempfile.cpp  runtempfile.h  smart_pointer.h  sshagent.cpp  sshagent.h  stl2qt.cpp  stl2qt.h  stringhelper.h  sub2qt.cpp  sub2qt.h  windowgeometryhelper.cpp  windowgeometryhelper.h
src/icons/: CMakeLists.txt  hisc-app-kdesvn.svgz  sc-apps-kdesvn.svgz
src/kdesvnd/: CMakeLists.txt  Makefile.am  kdesvn_subversion.desktop  kdesvn_subversion.desktop.in  kdesvn_subversion.desktop.template  kdesvn_subversion_toplevel.desktop  kdesvn_subversion_toplevel.desktop.template  kdesvnd.cpp  kdesvnd.desktop  kdesvnd.h  kdesvnd.json  kdesvnd_dcop.cpp  kdesvnd_dcop.h  kdesvnd_listener.cpp  kdesvnd_listener.h  ksvnjobview.cpp  ksvnjobview.h  main.cpp  org.kde.kdesvnd.service.in  org.kde.kdesvnd.xml  test.kde.sh
src/kiosvn/: CMakeLists.txt  Makefile.am  kio_macros.h  kiobytestream.cpp  kiobytestream.h  kiolistener.cpp  kiolistener.h  kiosvn.cpp  kiosvn.h  ksvn+file.protocol  ksvn+http.protocol  ksvn+https.protocol  ksvn+ssh.protocol  ksvn.protocol  svn+file.protocol  svn+http.protocol  svn+https.protocol  svn+ssh.protocol  svn.json  svn.protocol
src/ksvnwidgets/: CMakeLists.txt  Makefile.am  authdialogimpl.cpp  authdialogimpl.h  authdialogwidget.cpp  authdialogwidget.h  authdlg.ui  commitbugtrackervalues.cpp  commitbugtrackervalues.h  commitmessage.ui  commitmsg_impl.cpp  commitmsg_impl.h  deleteform.cpp  deleteform.h  deleteform.ui  deleteform_impl.cpp  deleteform_impl.h  depthform.ui  depthselector.cpp  depthselector.h  depthselector.ui  diffbrowser.cpp  diffbrowser.h  diffbrowserdata.cpp  diffbrowserdata.h  diffsyntax.cpp  diffsyntax.h  encodingselector.ui  encodingselector_impl.cpp  encodingselector_impl.h  ksvndialog.cpp  ksvndialog.h  localeselector.ui  localeselector_impl.cpp  localeselector_impl.h  logmessage.ui  logmsg_impl.cpp  logmsg_impl.h  pwstorage.cpp  pwstorage.h  (+10 more)
src/listview/: Makefile.am  authdialogimpl.cpp  authdialogimpl.h  ccontextlistener.cpp  ccontextlistener.h  dirlistviewitem.cpp  dirlistviewitem.h  editproperty_impl.cpp  editproperty_impl.h  editpropsdlg.ui  filelistviewitem.cpp  filelistviewitem.h  kdesvndirlist.cpp  kdesvndirlist.h  kdesvnfilelist.cpp  kdesvnfilelist.h  propertiesdlg.cpp  propertiesdlg.h  rangeinput.ui  rangeinput_impl.cpp  svnactions.cpp  svnactions.h  svnlogdlg.ui  svnlogdlgimp.cpp  svnlogdlgimp.h
src/pics/: .gitignore  CMakeLists.txt  Makefile.am  crsc-action-cleanup.svgz  crsc-action-svnadd.svgz  crsc-action-svnblame.svgz  crsc-action-svncheckupdates.svgz  crsc-action-svncommit.svgz  crsc-action-svndiff.svgz  crsc-action-svninfo.svgz  crsc-action-svnlog.svgz  crsc-action-svnswitch.svgz  crsc-action-svnupdate.svgz  crsc-filesys-exclam.svgz  crsc-filesys-svndeleted.svgz  hisc-action-cleanup.svgz  hisc-action-kdesvnexport.svgz  hisc-action-kdesvnimportfolder.svgz  hisc-action-kdesvnunlock.svgz  hisc-action-svncheckout.svgz  hisc-action-svncheckupdates.svgz  hisc-action-svncopy.svgz  hisc-action-svndiff.svgz  hisc-action-svnexport.svgz  hisc-action-svnlock.svgz  hisc-action-svnrelocate.svgz  hisc-action-svnunlock.svgz  hisc-filesys-kdesvnadded.svgz  hisc-filesys-kdesvnconflicted.svgz  hisc-filesys-kdesvnmodified.svgz  hisc-filesys-kdesvnneedlock.svgz  hisc-filesys-svnlocked.svgz  hisc-filesys-svnupdates.svgz  sc-actions-kdesvnaddrecursive.svgz  sc-actions-kdesvnclock.svgz  sc-actions-kdesvncolors.svgz  sc-actions-kdesvncommit.svgz  sc-actions-kdesvnmove.svgz  sc-actions-kdesvnnewfolder.svgz  sc-actions-kdesvnrepository.svgz  (+6 more)
src/settings/: CMakeLists.txt  Makefile.am  cmdexecsettings.ui  cmdexecsettings_impl.cpp  cmdexecsettings_impl.h  diffmergesettings.ui  diffmergesettings_impl.cpp  diffmergesettings_impl.h  dispcolor_settings.ui  dispcolorsettings_impl.cpp  dispcolorsettings_impl.h  display_settings.ui  displaysettings_impl.cpp  displaysettings_impl.h  kdesvn-use-external-update.sh  kdesvn_part.kcfg  kdesvnpartrc-use-external.upd  kdesvnsettings.kcfgc  polling_settings.ui  polling_settings_impl.cpp  polling_settings_impl.h  revisiontree_settings.ui  revisiontreesettingsdlg_impl.cpp  revisiontreesettingsdlg_impl.h  subversion_settings.ui  subversionsettings_impl.cpp  subversionsettings_impl.h
src/svncpp/: Makefile.am  client.cpp  client.hpp  client_annotate.cpp  client_cat.cpp  client_diff.cpp  client_impl.hpp  client_lock.cpp  client_ls.cpp  client_modify.cpp  client_property.cpp  (+33 more)
(+760 files in other folders)
